Publication: Remove unneeded overflow x styles that were causing the menu not to display. Fixes #340.

--- a/publication/blocks.css
+++ b/publication/blocks.css
@@ -18,12 +18,6 @@ Description: Used to style Gutenberg Blocks.
 1.0 General Block Styles
 --------------------------------------------------------------*/
 
-/* Alignments */
-
-.no-sidebar #page {
-	overflow-x: hidden;
-}
-
 /* Full Width */
 
 .no-sidebar .alignfull {
